--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body{
     padding:0;
     margin:0;
+    position: relative;
 }
 h1{
     font-size:2.5rem;
@@ -11,7 +12,42 @@ h1{
     color: rgb(242, 117, 72);
     
 }
-form{
+#overlay{
+    display: none;
+    flex-direction: column;
+    justify-content: center;
+    width:80%;
+    margin:150px 30px 0 30px;
+    height: 300px;
+    box-shadow: 0 4px 15px rgba(0,0,0,0.3);
+    border-radius: 30px;
+    background-color: rgb(246, 243, 243);
+    position:absolute;
+}
+#overlay-form{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 30px;
+    gap: 10px;
+}
+#overlay-form input{
+    border:none;
+    width:100%;
+    font-size: 1.5rem;
+    text-align: center;
+    color: rgb(216, 208, 208);
+    background-color: rgb(115, 117, 118);
+}
+
+#overlay-form button{
+    width:100px;
+    background-color: rgb(124, 124, 228);
+    color:white;
+}
+
+.chore-form{
     margin-top: 20px;
     display:flex;
     gap:5px;
@@ -27,11 +63,16 @@ input{
     border-radius: 10px;
     width: 60%;
 }
+
 button{
     padding:10px 20px;
     border: none;
     border-radius: 10px;
     font-size: 1rem;
+}
+#greeting{
+    text-align: center;
+    font-size:  1.8rem;
 }
 #add {
     background-color: rgb(242, 117, 72);
@@ -41,7 +82,7 @@ button{
     background-color: brown;
     color: aliceblue;
 }
-#remove-chore{
+.remove-chore{
     color: gray;
     font-size: 0.8rem;
     margin-right: 30px;
